# brax_training_viewer

./: .buildinfo  .gitignore  .gitmodules  MANIFEST.in  NOTICE  README.md  RENDERING_INTEGRATION.md  genindex.html  installation-pip.html  installation-uv.html  installation.html  integration-guide.html  internal.html  intro.html  objects.inv  pyproject.toml  python-api.html  quick-start.html  requirements.txt  search.html  searchindex.js  usage-guide.html  web-api.html
_sources/: installation-pip.md  installation-uv.md  installation.md  integration-guide.md  internal.md  intro.md  python-api.md  usage-guide.md  web-api.md
api/: braxsender.html  config.html  connectionmanager.html  html-utils.html  sender.html  server.html  statestreamer.html  utils.html  viewerwrapper.html  webviewer.html
benchmarks/: analysis_speed.py
brax_training_viewer/: backend.py  utils.py  web_server.py  websocket_streamer.py
braxo/: main.py  pyproject.toml
braxviewer/: BraxSender.py  Sender.py  StateStreamer.py  WebSocketStreamer.py  WebViewer.py  WebViewerBatched.py  WebViewerParallel.py  __init__.py  config.py  server.py  utils.py  viewer.py  wrapper.py
demo/: analysis_speed.py  cartpole.py  cartpole_batched.py  training_example.py  web_viewer.py
docs/: README.md  _config.yml  _toc.yml  benchmarks.md  braxviewer_architecture.md  contributing.md  installation.md  integration-guide.md  internal.md  intro.md  python-api.md  quick-start.md  requirements.txt  usage-guide.md  web-api.md
examples/: cartpole.py  training_example.py  web_viewer.py
frontend/: bad.json  good.json  index.html
internal/: config.html  connectionmanager.html  html-utils.html  sender.html  server.html  statestreamer.html  utils.html
(+89 files in other folders)
