[project]
name = "braxviewer"
version = "0.1.0"
description = "A web-based real-time visualization tool for Brax training"
authors = [
    { name = "Shouyue Hu", email = "bruce.shouyue.hu@gmail.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "visualization",
    "reinforcement learning",
    "web",
    "brax"
]
dependencies = [
    "asyncio>=3.4.3",
    "brax>=0.12.4",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]

[tool.setuptools.packages.find]
include = ["braxviewer"]

[tool.setuptools.package-data]
braxviewer = ["static/**/*"]